<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context="vavien.agency.goalalert.activity.SettingsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/title_activity_settings"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/vibrateSwitch"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/goalalertSwitch"
        android:layout_alignStart="@+id/goalalertSwitch"
        android:layout_below="@+id/textView"
        android:layout_marginTop="117dp"
        android:text="@string/pref_title_vibrate"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Switch
        android:id="@+id/goalalertSwitch"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vibrateSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/goal_message"
        android:textColor="@color/white"
        android:textSize="25sp" />


</RelativeLayout>
